# jayrah

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MIGRATION.md  Makefile  README.md  pyproject.toml  yaml.py
.cursor/rules/: api-patterns.mdc  cli-patterns.mdc  code-style.mdc  configuration.mdc  development-workflow.mdc  project-structure.mdc  testing.mdc  ui-patterns.mdc
.github/instructions/: Testing.instructions.md  tui.instructions.md  web-ui.instructions.md
jayrah/: boards.py  cache.py  cli.py  commands.py  config.py  defaults.py  help.py  issue_action.py  issue_view.py  jirahttp.py  label_service.py  label_ui.py  mcp_server.py  utils.py
jayrah/api/: __init__.py  auth.py  exceptions.py  formatters.py  jira.py  jira_client.py  request_handler.py
jayrah/commands/: __init__.py  browse.py  cache.py  common.py  completions.py  create.py  gencontext.py  issue_action.py  issue_create.py  issue_view.py  mcli.py  mcp.py  mcp_server.py
jayrah/ui/: css.py  (+8 more)
misc/: completion.bash  completion.zsh  config.sample.yaml  make-release.sh
myji/: boards.py  cache.py  cli.py  commands.py  config.py  defaults.py  help.py  issue_action.py  issue_view.py  jirahttp.py  myji.py  utils.py
rich/: __init__.py  markdown.py  prompt.py
rust/: Cargo.toml
rust/jayrah-jira/: Cargo.toml
rust/jayrah-jira/src/: lib.rs
tests/: conftest.py  test_api_version.py  test_auth_methods.py  test_boards_auth.py  test_browse_query.py  test_cache.py  test_commands.py  test_config.py  test_create_command.py  test_gencontext_query.py  test_issue_create.py  test_jirahttp.py  test_label_service.py  test_label_ui.py  test_markdown_to_jira.py  test_mcli_machine.py  test_mcp_add_comment.py  test_mcp_server.py  test_rust_tui_launcher.py  test_search.py  test_search_functions.py  test_search_mcp.py  test_tui_app.py  test_utils.py  ui_test.py
(+51 files in other folders)
