[project]
name = "jayrah"
version = "0.1.0"
description = "A command-line tool for managing Jira issues with FZF."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.8",
  "jira2markdown>=0.1.3",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
]
scripts = { jayrah = "jayrah.cli:main" }

[dependency-groups]
dev = ["ipython>=9.0.2", "isort>=6.0.1", "pylint>=3.3.5"]

[tool.setuptools]
py-modules = ["jayrah"]

[tool.uv]
package = true
