[project]
name = "jayrah"
version = "0.1.0"
description = "A command-line tool for managing Jira issues with FZF."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.8",
  "jira2markdown>=0.1.3",
  "mcp>=1.8.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "textual>=3.2.0",
  "textual-dev>=1.7.0",
]
scripts = { jayrah = "jayrah.cli:main" }

[dependency-groups]
dev = ["ipython>=9.0.2", "isort>=6.0.1", "pylint>=3.3.5", "pytest-cov>=6.0.0"]

[tool.setuptools]
py-modules = ["jayrah"]

[tool.uv]
package = true
