[package]
name = "jayrah-jira"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
jayrah-config = { path = "../jayrah-config" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
